--- a/album_1.html
+++ b/album_1.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" media="screen" href="css/main.css" />
     <link rel="stylesheet" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css" />
-    <script src="https://cdn.jsdelivr.net/npm/lazyload@2.0.0-beta.1/lazyload.js"></script>
 </head>
 <body>
     <a class="home-page" href="index.html">
@@ -15,50 +14,50 @@
     </a>
     <div class="photobook">
       
-            <picture class="photobook__images lazyload">
+            <picture class="photobook__images">
                 <source srcset="img/background-3062011_640.jpg"
                         media="(max-width: 640px)">
                 <img srcset="img/background-3062011_1280.jpg 1x,
                                 img/background-3062011_1920.jpg 2x"
                         alt="Camels"
-                        class="lazyload photobook__img">
+                        class="photobook__img">
             </picture>
     
 
-        <picture class="photobook__images lazyload">
+        <picture class="photobook__images">
                 <source srcset="img/dawn-3291444_640.jpg"
                         media="(max-width: 640px)">
                 <img srcset="img/dawn-3291444_1280.jpg 1x,
                                 img/dawn-3291444_1920.jpg 2x"
                         alt="Camels"
-                        class="lazyload photobook__img">
+                        class="photobook__img">
         </picture>
 
-        <picture class="photobook__images lazyload">
+        <picture class="photobook__images">
                 <source srcset="img/northern-lights-3273425_640.jpg"
                         media="(max-width: 640px)">
                 <img srcset="img/northern-lights-3273425_1280.jpg 1x,
                                 img/northern-lights-3273425_1920.jpg 2x"
                         alt="northern lights"
-                        class="lazyload photobook__img">
+                        class="photobook__img">
         </picture>
 
-        <picture class="photobook__images lazyload">
+        <picture class="photobook__images">
                 <source srcset="img/snow-3193865_640.jpg"
                         media="(max-width: 640px)">
                 <img srcset="img/snow-3193865_1280.jpg 1x,
                                 img/snow-3193865_1920.jpg 2x"
                         alt="snow"
-                        class="lazyload photobook__img">
+                        class="photobook__img">
         </picture>
 
-        <picture class="photobook__images lazyload">
+        <picture class="photobook__images">
                 <source srcset="img/sunset-1661088_640.jpg"
                         media="(max-width: 640px)">
                 <img srcset="img/sunset-1661088_1280.jpg 1x,
                                 img/sunset-1661088_1920.jpg 2x"
                         alt="sunset"
-                        class="lazyload photobook__img">
+                        class="photobook__img">
         </picture>
     </div>
   
